--- a/src/ProductPricing.Web/ProductPricing.Web.csproj
+++ b/src/ProductPricing.Web/ProductPricing.Web.csproj
@@ -307,6 +307,12 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ProductPricing.DataAccess\ProductPricing.DataAccess.csproj">
+      <Project>{926E3144-B9FD-4827-B175-F18FED53876C}</Project>
+      <Name>ProductPricing.DataAccess</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
