--- a/src/ProductPricing.Web/packages.config
+++ b/src/ProductPricing.Web/packages.config
@@ -28,5 +28,8 @@
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.3.0" targetFramework="net451" />
+  <package id="Unity" version="3.0.1304.0" targetFramework="net451" />
+  <package id="Unity.Mvc" version="3.0.1304.0" targetFramework="net451" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net451" />
 </packages>
