Start data loader

--- a/src/Tools/DataLoader/DataLoader.csproj
+++ b/src/Tools/DataLoader/DataLoader.csproj
@@ -44,6 +44,12 @@
     <Compile Include="FileParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\ProductPricing.DataAccess\ProductPricing.DataAccess.csproj">
+      <Project>{926E3144-B9FD-4827-B175-F18FED53876C}</Project>
+      <Name>ProductPricing.DataAccess</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
